# Wordflow

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: manage.py  pyproject.toml  run_dev.sh
backend/api/v1/: urls.py
backend/api/v1/blogs/: filters.py  pagination.py  permissions.py  serializers.py  views.py
backend/api/v1/comments/: permissions.py  serializers.py  views.py
backend/api/v1/images/: serializers.py  views.py
backend/api/v1/main_page/: views.py
backend/blogs/: apps.py  models.py
backend/blogs/migrations/: 0001_initial.py  0002_blog_created_at.py  0003_blogauthor_role.py
backend/comments/: apps.py  models.py
backend/comments/migrations/: 0001_initial.py  0002_comment_created_at_comment_updated_at.py  0003_remove_comment_updated_at_comment_edited.py
backend/images/: apps.py  models.py
backend/images/migrations/: 0001_initial.py
backend/posts/: apps.py  models.py
backend/posts/migrations/: 0001_initial.py  0002_post_unique_blog_post_slug.py  0003_post_check_valid_post_status.py  0004_post_preview_alter_post_created_at_and_more.py
backend/roles/: apps.py  models.py
backend/roles/migrations/: 0001_initial.py  0002_alter_role_name.py
backend/tags/: apps.py  models.py
backend/tags/migrations/: 0001_initial.py  0002_alter_tag_name_alter_tag_slug.py
backend/users/: apps.py  backend.py  models.py
backend/users/migrations/: 0001_initial.py  0002_add_removed_user.py  0003_user_avatar.py
backend/utils/: constants.py  tools.py
backend/wordflow/: asgi.py  settings.py  urls.py  wsgi.py
(+123 files in other folders)
