[project]
name = "wordflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Maslennikov",email = "ktotom7@yandex.ru"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
